# psi-load

./: .gitignore  AUTHORS  Makefile.am  README.md  autogen.sh  configure.ac
common/: Makefile.am  colors.c  colors.h  graph-data.c  graph-data.h  load-config.c  load-config.h  load-graph.c  load-graph.h  load.c  load.h  properties.h  psi.c  psi.h
mate/: Makefile.am  configure.m4  org.mate.load.Applet.mate-panel-applet.in.in.in  org.mate.panel.applet.LoadFactory.service.in  org.mate.panel.applet.load.gschema.xml.in.in  plugin.c
po/: POTFILES.in  ru.po
